--- a/src/webui/_locales/km/messages.json
+++ b/src/webui/_locales/km/messages.json
@@ -247,6 +247,10 @@
         "message": "ប៉ូឡូញ",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
+    "settings#egress-region#select-rs": {
+        "message": "Serbia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Serbia will be used."
+    },
     "settings#egress-region#description": {
         "message": "Psiphon មានម៉ាស៊ីនមេនៅក្នុងប្រទេសផ្សេងៗជាច្រើន។ ការប្រើម៉ាស៊ីនមេ នៅក្នុងប្រទេសដែលនៅជិតប្រទេសរបស់អ្នក ជាទូទៅនឹងផ្តល់នូវការតភ្ជាប់បណ្តាញល្អប្រសើរជាងមុន ប៉ុន្តែអ្នកប្រហែលជាចង់ចូលប្រើគេហទំព័រនិងសេវាកម្ម ដូចអ្នកស្ទើរតែនៅក្នុងប្រទេសជាក់លាក់មួយ។",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. The word 'Psiphon' must not be translated or transliterated."
