Add AU egress region

--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -375,6 +375,10 @@
     "message": "[Ȧȧŭŭşŧřīīȧȧ]",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Austria will be used."
   },
+  "settings#egress-region#select-au": {
+    "message": "[Ȧȧŭŭşŧřȧȧŀīīȧȧ]",
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Australia will be used."
+  },
   "settings#egress-region#select-be": {
     "message": "[Ɓḗḗŀɠīīŭŭḿ]",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Belgium will be used."
