--- a/src/webui/_locales/ur/messages.json
+++ b/src/webui/_locales/ur/messages.json
@@ -251,6 +251,10 @@
         "message": "Serbia",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Serbia will be used."
     },
+    "settings#egress-region#select-au": {
+        "message": "Australia",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Australia will be used."
+    },
     "settings#egress-region#description": {
         "message": "Psiphon (سائفن) کے سرورز کئی ممالک میں پائے جاتے ہیں۔ اپنے پڑوسی ملک کا Psiphon (سائفن) سرور استعمال کرنے سے آپ کو عام طور پر بہتر نیٹ ورک کنکشن مہیا ہوگا، لیکن آپ کو اس مخصوص ملک کی ویب سائٹس اور سروسز تک رسائی حاصل کرنی پڑتی ہے جیسا کہ آپ اسی ملک میں عملی طور پر کام کر رہے ہیں۔",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. The word 'Psiphon' must not be translated or transliterated."
