Show message and exit when run on XP/Vista
Partially implements Psiphon-Inc/psiphon-issues#644

--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -27,6 +27,10 @@
     "message": "‮Ԁsıdɥou‬ ‮ɥɐs‬ ‮qǝǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬",
     "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons). The word 'Psiphon' must not be translated or transliterated."
   },
+  "appbackend#os-unsupported": {
+    "message": "‮Ԁsıdɥou‬ ‮uo‬ ‮ʅouƃǝɹ‬ ‮snddoɹʇs‬ ‮Ｍıupoʍs‬ ‮XԀ‬ ‮oɹ‬ ‮Ʌısʇɐ‬.\n‮Ԁʅǝɐsǝ‬ ‮ʌısıʇ‬ ‮onɹ‬ ‮ʍǝqsıʇǝ‬ ‮ɟoɹ‬ ‮ɯoɹǝ‬ ‮ıuɟoɹɯɐʇıou‬.",
+    "description": "Appears in a message box when Psiphon is run on an unsuppoted version of Windows. Is followed by a URL."
+  },
   "appbackend#state-connected-body": {
     "message": "‮Ǝxdʅoɹǝ‬ ‮qǝʎoup‬ ‮ʎonɹ‬ ‮qoɹpǝɹs‬!",
     "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
