--- a/src/webui/_locales/it/messages.json
+++ b/src/webui/_locales/it/messages.json
@@ -36,11 +36,11 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'About' view. In that view the user can see info about the app, info about Psiphon Inc., and click links for more information."
     },
     "connection#starting-msg": {
-        "message": "Psiphon sta <span class=\"state-word\">connettendo</span>...",
+        "message": "Psiphon in <span class=\"state-word\">connessione</span>...",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to connect to the network. The word 'Psiphon' must not be translated or transliterated."
     },
     "connection#stop-btn": {
-        "message": "Arresta",
+        "message": "Stop",
         "description": "Text on the big connection button telling the user that if they click it, they will stop trying to connect to the network. This is shown to the user when they are trying to connect."
     },
     "connection#connected-msg": {
@@ -48,11 +48,11 @@
         "description": "Message in the big connection status box telling the user that Psiphon is currently connected to the network. The word 'Psiphon' must not be translated or transliterated."
     },
     "connection#disconnect-btn": {
-        "message": "Disconnessione",
+        "message": "Disconnetti",
         "description": "Text on the big connection button telling the user that if they click it, they will be disconnected from the network. This is shown when the user is currently connected."
     },
     "connection#stopping-msg": {
-        "message": "Psiphon stà <span class=\"state-word\">disconnettendo</span>…",
+        "message": "Psiphon in <span class=\"state-word\">disconnessione</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network. The word 'Psiphon' must not be translated or transliterated."
     },
     "connection#wait-btn": {
@@ -108,11 +108,11 @@
         "description": "If 'L2TP/IPSec mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with L2TP/IPSec mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
     },
     "settings#split-tunnel#heading": {
-        "message": "Tunnel separati",
+        "message": "Split Tunnel",
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
     },
     "settings#split-tunnel#help-text": {
-        "message": "If enabled, requests made to servers within your home country will not be tunneled through Psiphon.",
+        "message": "Se abilitato, le richieste inoltrate ai server della tuo paese, non saranno gestite da Psiphon.",
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#split-tunnel#reason": {
@@ -292,7 +292,7 @@
         "description": "Label for the text box where the user will enter their desired local port for the Psiphon HTTP/HTTPS process. The full term for this would be 'Desired HTTP and HTTPS local proxy port', but is shortened."
     },
     "settings#port-value-error-msg": {
-        "message": "Deve essere compreso fra 1 e 65535",
+        "message": "Dev'essere compreso fra 1 e 65535",
         "description": "Error text that appears when the user enters an invalid network port number. As indicated, a valid port number must be a number between 1 and 65535, inclusive. This text is not visible until an invalid value is entered."
     },
     "settings#local-proxy-ports#socks-label": {
@@ -320,7 +320,7 @@
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
     },
     "settings#upstream-proxy#by-default": {
-        "message": "Se il tuo computer ha un proxy configurato, di norma Psiphon utilizza questo proxy per connettere i tunnel. Puoi cambiare questo comportamento specificando un diverso proxy da utilizzare, o specificando di non utilizzare il proxy configurato.",
+        "message": "Se il tuo computer ha un proxy configurato, di norma Psiphon utilizza quel proxy per connettere i tunnel. Puoi cambiare questo comportamento specificando un proxy diverso, o specificando di non utilizzare il proxy configurato.",
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#upstream-proxy#reason": {
@@ -384,11 +384,11 @@
         "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#transport-mode#heading": {
-        "message": "Transport Mode",
+        "message": "Tipo VPN",
         "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "settings#transport-mode#check-label": {
-        "message": "Use L2TP/IPSec mode",
+        "message": "Usa L2TP/IPSec",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
     },
     "settings#transport-mode#help-text": {
@@ -428,19 +428,19 @@
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
     },
     "feedback#top_content_title": {
-        "message": "Inviaci i tuoi commenti",
+        "message": "Inviaci il Tuo Feedback",
         "description": "Title for the Feedback page"
     },
     "feedback#top_para_2": {
-        "message": "Many problems can be fixed by downloading the latest version. You can <a class=\"NewVersionURL\" href=\"#\">download the latest version by clicking here</a>, or you can send an email to <a class=\"NewVersionEmail\" href=\"#\"></a>.",
+        "message": "Molti problemi sono risolvibili aggiornando all'ultima versione.  Puoi <a class=\"NewVersionURL\" href=\"#\">ottenere l'ultima versione cliccando qui</a>, oppure inviando un'email a <a class=\"NewVersionEmail\" href=\"#\"></a>.",
         "description": "Text telling the user that downloading a new version of Psiphon may be beneficial, and how to get a new version."
     },
     "feedback#top_para_3": {
-        "message": "You can also find solutions to many common problems in our <a class=\"FaqURL\" href=\"#\">Frequently Asked Questions</a>.",
+        "message": "Inoltre è possibile trovare soluzioni a problemi comuni nelle nostre <a class=\"FaqURL\" href=\"#\">Domande Frequenti</a>.",
         "description": "Text telling the user how to get to the Psiphon FAQ."
     },
     "feedback#smiley_happy": {
-        "message": "Psiphon si connette e funziona come desidero.",
+        "message": "Psiphon si collega e opera correttamente.",
         "description": "The text below the 'happy face' feedback choice. The word 'Psiphon' must not be translated or transliterated."
     },
     "feedback#smiley_sad": {
@@ -452,11 +452,11 @@
         "description": "Label for a text box where the user can provide a feedback message to Psiphon Inc."
     },
     "feedback#text_feedback_email_prompt": {
-        "message": "If you would like us to respond to you, please enter your email address:",
+        "message": "Se desideri una risposta, inserisci il tuo indirizzo email:",
         "description": "Label for a text field where the user can provide an email address to Psiphon Inc. along with their feedback."
     },
     "feedback#diagnostic_check": {
-        "message": "Upload diagnostic data. Please note that this diagnostic data does not identify you, and it will help us to keep Psiphon running smoothly. <a class=\"DataCollectionInfoURL\" href=\"#\">Click here to see what data we collect.</a>",
+        "message": "Caricare dati diagnostici. Si osservi che questi dati diagnostici non identificano l'utente e ci aiuteranno a garantire il corretto funzionamento di Psiphon. <a class=\"DataCollectionInfoURL\" href=\"#\">Clicca qui per vedere i dati raccolti</a>.",
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc. The word 'Psiphon' must not be translated or transliterated."
     },
     "feedback#submit_button": {
@@ -464,11 +464,11 @@
         "description": "Submit button text. If the user clicks it, their feedback will be sent to Psiphon Inc."
     },
     "feedback#text_feedback_bottom_para": {
-        "message": "If the above form is not working, or you would like to send screenshots, please email us at <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>.",
+        "message": "Se il modulo precedente non funziona, o vuoi trasmettere degli screenshot, inviaci un'e-mail all'indirizzo <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>.",
         "description": "Message showing the user an email they can use to contact Psiphon Inc."
     },
     "feedback#success-message": {
-        "message": "<strong>Thank you!</strong> Your feedback has been sent.",
+        "message": "<strong>Grazie!</strong> Il tuo feedback è stato inviato.",
         "description": "Message shown to user after their feedback has been sent successufully"
     },
     "logs#show-debug-label": {
